--- a/PurgeESignTemporaryFiles.Console/App.config
+++ b/PurgeESignTemporaryFiles.Console/App.config
@@ -1,11 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
   <appSettings>
     <add key="ServiceStatus" value="On"/>
-    <add key="ScheduledRunTime" value="14:09:00" /><!--預計排程開始要設定比目前時間晚-->
+    <add key="ScheduledRunTime" value="14:09:00" />
+    <!--預計排程開始要設定比目前時間晚-->
     <add key="TimeBetweenEachRun" value="00:01:00" />
     <add key="ProcessLogFilePath" value="D:\FileNet\LeoIWSKL\WebService_DataSync\Log\%currentMonth%\Process" />
     <add key="ProcessLogReservedDays" value="7" />
@@ -18,6 +19,6 @@
     <add key="WSUploadFileLogFilePath" value="D:\FileNet\LeoIWSKL\webservice_fileupload\WSUPLoadF\log" />
     <add key="WSUploadFileLogReservedDays" value="7" />
     <add key="ZipFileBackupFilePath" value="D:\FileNet\LeoIWSKL\WebService_DataSync\Log\%currentMonth%\ZipFileBackup" />
-    <add key="ZipFileBackupReservedDays" value="15" />
+    <add key="ZipFileBackupReservedDays" value="20" />
   </appSettings>
 </configuration>
