加入刪除上個月的Log檔案

--- a/PurgeESignTemporaryFiles.Console/App.config
+++ b/PurgeESignTemporaryFiles.Console/App.config
@@ -20,5 +20,6 @@
     <add key="WSUploadFileLogReservedDays" value="7" />
     <add key="ZipFileBackupFilePath" value="D:\FileNet\LeoIWSKL\WebService_DataSync\Log\%currentMonth%\ZipFileBackup" />
     <add key="ZipFileBackupReservedDays" value="20" />
+    <add key="CheckLastMonthFilesDay" value="8" />
   </appSettings>
 </configuration>
